--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,14 +30,13 @@ http {
     server {
         listen 80;
         server_name example.com;
+        root /var/www/public;
 
-        root /var/www;
         index index.php index.html index.htm;
 
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
-
         location /api {
             proxy_pass http://backend:9000;
             include /etc/nginx/proxy_params;
@@ -46,13 +45,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
         location ~ \.php$ {
-            include fastcgi_params;
+            fastcgi_pass backend:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-            fastcgi_pass backend:9000;  
+            include fastcgi_params;
         }
+
+        location ~ /\.ht {
+            deny all;
+        }
+
+        error_log /var/log/nginx/laravel_error.log;
+        access_log /var/log/nginx/laravel_access.log;
     }
 }
