--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     server {
         listen 80;
-        server_name example.com;
+        server_name localhost;
         root /var/www/public;
 
         index index.php index.html index.htm;
@@ -37,14 +37,7 @@ http {
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
-        location /api {
-            proxy_pass http://backend:9000;
-            include /etc/nginx/proxy_params;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        
         location ~ \.php$ {
             fastcgi_pass backend:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
